--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -15,3 +15,23 @@ a {
   height: 100vh;
   width: 100vw;
 }
+
+.basket {
+  &:hover {
+    path {
+      fill: #000 !important;
+    }
+  }
+  position: relative;
+  > div {
+    position: absolute;
+    right: 0.25rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background: red;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    font-size: 0.85rem;
+  }
+}
